--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -2,9 +2,20 @@
 
 <%= simple_form_for @booking do |f| %>
   <%= f.input :location,
-              input_html: { data: { geocoder_target: "location" } },
+              input_html: { data: { geocoder_target: "location" }, class: "d-none" },
               wrapper_html: { data: { controller: "geocoder",
 geocoder_api_key_value: ENV['MAPBOX_API_KEY'] } } %>
 
   <%= f.button :submit, class: "btn btn-primary" %>
 <% end %>
+
+<%= simple_form_for @booking do |f| %>
+  <%= f.input :location,
+              input_html: { data: { geocoder_target: "location" }, class: "d-none" },
+              wrapper_html: { data: { controller: "geocoder",
+geocoder_api_key_value: ENV['MAPBOX_API_KEY'] } } %>
+
+  <%= f.button :submit, class: "btn btn-primary" %>
+<% end %>
+
+
