--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,12 +1,15 @@
 <h1>Pages#home</h1>
 <p>Find me in app/views/pages/home.html.erb</p>
 <h1>Reisetopia</h1>
-<%= form_tag hotels_path, method: :get do %>
+
+<%= form_tag hotels_path, data: { controller: "geocoder", geocoder_api_key_value: ENV['MAPBOX_API_KEY'] }, class: "form-inline", method: :get do %>
   <%= text_field_tag :query,
     params[:query],
-    class: "form-control",
+    data: { geocoder_target: "query" },
+    class: "d-none",
     placeholder: "Find a hotel"
   %>
   <%= submit_tag "Search", class: "btn btn-primary" %>
 <% end %>
+
 <%= link_to 'book now', new_booking_path  %>
